readAllBytes compatibility with java 1.8